2005-04-11  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/pipe.c (__pipe_flush_handler): Release the superlock
	while cycling on the flush queue.
	(__pipe_flush): Do _not_ free the stream buffer in the flush
	handler: it's the output handler's business.

	* include/nucleus/asm-*/hal.h: Make sysreq-related prototypes and
	names more consistent.
	
2005-04-10  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c (rthal_request_linux_irq,
	rthal_release_linux_irq): Use generic spinlocks since we must be
	running over the Linux context in those routines.

2005-04-09  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_relax): Make sure we don't
	inadvertently pass out-of-range priority levels to the Linux
	kernel when reentering the root domain (__adeos_reenter_root()).

	* skins/rtai/syscall.c (__rt_intr_create): Handle I_PROPAGATE mode
	bit for dynamic propagation of interrupts down the pipeline
	(i.e. IRQ chaining to Linux). Quite useful for people hooking an
	ISR on, say, the keyboard interrupt...

2005-04-09  Jim Cromie <jcromie@divsol.com>
	
	* testsuite/latency: Fix the overrun count.
	
2005-04-09  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10,11-i386-r10c2.

	* skins/rtai/mutex.c (rt_mutex_unlock): Make sure -EPERM is
	returned when applicable and fix the documentation.

2005-04-09 Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skins/rtai/syscalls.c (__rt_mutex_unlock): Force primary mode
	switch so that a RT task currently running in secondary mode that
	owns a mutex does not get a spurious -EPERM error when trying to
	release it.

	* skins/rtai/mutex.c (__mutex_read_proc): Fix output, ensuring
	that a locked mutex always gets dumped as such even if the wait
	queue is empty.

2005-04-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Make sure RTAI_LINUXDIR is written to .rtai_config
	upon manual configuration.
	
2005-04-03  Philippe Gerum  <rpm@xenomai.org>
